--- a/site-fhc/package.json
+++ b/site-fhc/package.json
@@ -14,6 +14,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.3",
     "remixicon": "^4.1.0",
+    "site-fhc": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
